# agentiq-toolkit

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  README.md  manifest.yaml  pyproject.toml
.devcontainer/: Dockerfile  README.md  docker-compose.yml  initialize-command.sh
.devcontainer/cuda12.5-conda/: devcontainer.json
ci/scripts/: bootstrap_local_ci.sh  common.sh  run_ci_local.sh
ci/scripts/github/: build_wheel.sh  common.sh  tests.sh
ci/scripts/gitlab/: artifactory_upload.sh  build_wheel.sh  common.sh
docs/: README.md
docs/source/: code-of-conduct.md  conf.py  index.md  release-notes.md  troubleshooting.md
docs/source/advanced/: contributing.md  index.md  running-ci-locally.md
docs/source/components/: code-execution.md  index.md  mcp.md  react-agent.md  reasoning-agent.md  retriever.md  tool-calling-agent.md
docs/source/concepts/: cli.md  evaluate.md  functions.md  index.md  memory.md  observability.md  plugins.md  profiler.md  workflow-configuration.md
docs/source/guides/: adding-an-llm-provider.md  create-customize-workflows.md  custom-evaluator.md  evaluate.md  index.md  observe-workflow-with-phoenix.md  profiler.md  sharing-workflows-and-tools.md  using-agentiq-ui-and-server.md
docs/source/intro/: get-started.md  index.md  install.md  why-agentiq.md
docs/source/references/: index.md  interactive-models.md  websockets.md
examples/: README.md
examples/agents/: README.md
examples/agents/data/: wikipedia.csv
examples/agents/mixture_of_agents/: README.md
examples/agents/react/: README.md
examples/agents/tool_calling/: README.md
examples/agno_personal_finance/: Dockerfile  README.md  pyproject.toml
examples/agno_personal_finance/src/agno_personal_finance/: agno_personal_finance_function.py
examples/agno_personal_finance/src/agno_personal_finance/configs/: config.yml
examples/agno_personal_finance/tests/: test_agno_personal_finance_workflow.py
examples/automated_description_generation/: Dockerfile  README.md  configs  pyproject.toml
examples/car_maintenance/: Dockerfile  README.md  pyproject.toml
examples/car_maintenance/src/car_maintenance/: car_maintenance_function.py  register.py
examples/car_maintenance/src/car_maintenance/configs/: config.yml  eval_config_llama-3.1-8b-instruct.yml  eval_config_llama-3.3-70b-instruct.yml
examples/car_maintenance/src/car_maintenance/data/: eval_data.json  eval_data_10.json
examples/documentation_guides/: README.md
examples/documentation_guides/workflows/text_file_ingest/: data  pyproject.toml
examples/documentation_guides/workflows/text_file_ingest/src/text_file_ingest/configs/: config.yml
examples/email_phishing_analyzer/: Dockerfile  README.md  pyproject.toml
examples/email_phishing_analyzer/configs/: config-llama-3.1-8b-instruct.yml  config-llama-3.3-70b-instruct.yml  config-mixtral-8x22b-instruct-v0.1.yml  config-phi-3-medium-4k-instruct.yml  config-phi-3-mini-4k-instruct.yml  config-reasoning.yml  config.yml
examples/email_phishing_analyzer/scripts/: run_phishing_evals_all.sh
examples/email_phishing_analyzer/src/aiq_email_phishing_analyzer/: register.py
examples/multi_frameworks/: README.md  configs  pyproject.toml
examples/multi_frameworks/src/aiq_multi_frameworks/: langchain_research_tool.py  register.py
examples/multi_frameworks/src/aiq_multi_frameworks/configs/: config.yml  eval_config.yml
examples/multi_frameworks/src/aiq_multi_frameworks/data/: eval_data.json
examples/plot_charts/: README.md  configs  data  pyproject.toml
examples/plot_charts/src/aiq_plot_charts/: create_plot.py  graph_instruction.py  plot_chain_agent.py  register.py
examples/plot_charts/src/aiq_plot_charts/configs/: config.yml
examples/por_to_jiratickets/: README.md  configs  data  pyproject.toml
examples/por_to_jiratickets/src/aiq_por_to_jiratickets/: extract_por_tool.py  jira_tickets_tool.py  register.py
examples/por_to_jiratickets/src/aiq_por_to_jiratickets/configs/: config.yml
examples/semantic_kernel_demo/: README.md  configs  pyproject.toml
examples/simple/: Dockerfile  README.md  configs  data  pyproject.toml
examples/simple/src/aiq_simple/configs/: config.yml  eval_config.yml  eval_upload_config.yml
examples/simple/src/aiq_simple/data/: langsmith.json
examples/simple/src/aiq_simple/scripts/: workflow_to_csv.py
examples/simple/tests/: test_simple_eval.py  test_simple_workflow.py  test_web_query_tool.py
examples/simple_calculator/: Dockerfile  README.md  configs  data  pyproject.toml
examples/simple_calculator/src/aiq_simple_calculator/: register.py
examples/simple_calculator/src/aiq_simple_calculator/configs/: config-reasoning.yml  config-tracing.yml  config.yml
examples/simple_mcp/: README.md
examples/simple_mcp/configs/: config.yml
examples/simple_mcp/deployment/: docker-compose.yml
examples/simple_mcp/servers/: Dockerfile.proxy  run_fetch.sh
examples/simple_rag/: README.md
examples/simple_rag/configs/: milvus_memory_rag_config.yml  milvus_memory_rag_tools_config.yml  milvus_rag_tools_config.yml
examples/simple_rag/ingestion/: langchain_web_ingest.py
examples/swe_bench/: README.md  configs  data  pyproject.toml
examples/swe_bench/src/aiq_swe_bench/configs/: config_gold.yml  config_skeleton.yml
scripts/: setup_datasets.py
src/aiq/agent/: base.py  register.py
src/aiq/builder/: builder.py  component_utils.py  context.py  eval_builder.py  front_end.py  function.py  function_base.py  function_info.py  intermediate_step_manager.py  user_interaction_manager.py  workflow.py  workflow_builder.py
src/aiq/cli/: entrypoint.py  register_workflow.py  type_registry.py
src/aiq/data_models/: api_server.py  common.py  component.py  component_ref.py  config.py  dataset_handler.py  discovery_metadata.py  embedder.py  evaluate.py  function_dependencies.py  interactive.py  intermediate_step.py  llm.py  memory.py  profiler.py  telemetry_exporter.py
src/aiq/embedder/: nim_embedder.py  register.py
tests/: conftest.py
tests/_utils/: configs.py
(+149 files in other folders)
