[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "aiq_multi_frameworks"
dynamic = ["version"]
dependencies = [
  "agentiq[llama-index,langchain]",
  "arxiv~=2.1.3",
  "colorama~=0.4.6",
  "markdown-it-py~=3.0",
  "nvidia-haystack==0.1.2",
]
requires-python = ">=3.12"
description = "Custom AgentIQ Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
agentiq = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
aiq_multi_frameworks = "aiq_multi_frameworks.register"
