[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "aiq_por_to_jiratickets"
dynamic = ["version"]
dependencies = [
  "agentiq[langchain]",
]
requires-python = ">=3.10"
description = "Custom AgentIQ Workflow"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
agentiq = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
aiq_por_to_jiratickets = "aiq_por_to_jiratickets.register"
