[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "aiq_simple"
dynamic = ["version"]
dependencies = [
  "agentiq[langchain]",
  "faiss-cpu==1.9.0",
]
requires-python = ">=3.12"
description = "Simple AgentIQ example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
agentiq = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
aiq_simple = "aiq_simple.register"
