[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../.."

[project]
name = "aiq_simple_calculator"
dynamic = ["version"]
dependencies = [
  "agentiq[langchain]",
]
requires-python = ">=3.12"
description = "Simple Calculator AgentIQ example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
agentiq = { path = "../../", editable = true }

[project.entry-points.'aiq.components']
aiq_simple_calculator = "aiq_simple_calculator.register"
